# tabularis-google-sheets-plugin

./: Cargo.toml  LICENSE.md  README.md  justfile  manifest.json
.github/workflows/: release.yml
src/: auth.rs  client.rs  main.rs  rpc.rs  sheets.rs  sql.rs
src/handlers/: crud.rs  ddl.rs  init.rs  metadata.rs  mod.rs  query.rs
ui/: package.json  pnpm-lock.yaml  vite.auth.config.ts  vite.db-field.config.ts
ui/src/: google-auth.tsx  google-sheets-db-field.tsx  styles.ts
